k8s/overlays/test/patches/ingress-dq-engine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-engine
spec:
  tls:
    - hosts:
        - dq-engine.jacloud.nl
      secretName: dq-engine.jacloud.nl-tls
  rules:
    - host: dq-engine.jacloud.nl
