k8s/overlays/test/patches/ingress-dq-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ui
spec:
  tls:
    - hosts:
        - dq-ui.jacloud.nl
      secretName: dq-ui.jacloud.nl-tls
  rules:
    - host: dq-ui.jacloud.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dq-frontend
                port:
                  number: 443
